# cw_6

./: pyproject.toml
mailing_manager/: manage.py
mailing_manager/mailing_manager/: asgi.py  settings.py  urls.py  wsgi.py
